fixed bucket and view name wrapping in drop-downs
Reviewed-on: http://review.couchbase.org/12189
Tested-by: Benjamin Young <benjamin@couchbase.com>

--- a/priv/public/css/jquery-ui.couchbase.css
+++ b/priv/public/css/jquery-ui.couchbase.css
@@ -334,6 +334,7 @@
 	padding:.2em .4em;
 	line-height:1.5;
 	zoom:1;
+	white-space:nowrap;
 }
 .ui-menu .ui-menu-item a.ui-state-hover,
 .ui-menu .ui-menu-item a.ui-state-active {
